--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="Box">This is a demo of model, try to replicate
+	this box model in Html & Css and pass all the test cases.</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
